main.css
@charset "UTF-8";
/* CSS Document */

body {
	background: url(pool.jpg) no-repeat center center fixed;
	background-size: cover;
	font-family: 'Raleway', sans-serif;
	margin: 0;
}

.all {
	min-width:100%;
	min-height:100%;
	}
	
.container {
        width: 100%;
        height: 4em;
        margin: 0;
   		vertical-align: top;
        background-color: rgba(0,0,0,0.5);
		float:left;
}

.imgcon {
	margin: 0 auto;
	width: 100%;
    display: block;
	float:right;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 2em;
	overflow: hidden;
	text-align: justify;
  	line-height: 0;
}

ul:after {
	content: '';
  	display: inline-block;
  	width: 100%;
	}

li {
    display: inline;
	color: white;
}

a:link {
    text-decoration: none;
	color: white;
}

a:visited {
    text-decoration: none;
	color: white;
}

img {
	margin:0;
	border:none;
	padding:0;
	min-width:240px;
	height:auto;
	}

